--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container" id="grid">
-        
+        <div class="sketch">
+
+        </div>
     </div>
     
 </body>
