--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -8,6 +8,7 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
+    <button class="setGridSize" onclick="gridSetUp()" >Set Grid Size</button>
     <div class="container" id="grid">
         <div class="sketch">
 
