add header and footer

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -8,11 +8,17 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <button class="setGridSize" onclick="gridSetUp()" >Set Grid Size</button>
+    <div class="header">
+        <h2 class="heading">ETCH-A-SKETCH</h2>
+        <button class="setGridSize" onclick="gridSetUp()" >Set Grid Size</button>
+    </div>
     <div class="container" id="grid">
         <div class="sketch">
 
         </div>
+    </div>
+    <div class="footer">
+    <p>An exercise</p>
     </div>
     
 </body>
