--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -10,7 +10,11 @@
 <body>
     <div class="header">
         <h2 class="heading">ETCH-A-SKETCH</h2>
-        <button class="setGridSize" onclick="gridSetUp()" >Set Grid Size</button>
+        <div class="btnContainer">
+            <div class="btnNote">Set: (or reset) number of grid pixel squares per side</div>
+            <button class="setGridSize" onclick="gridSetUp()" >Set Grid Size</button>
+            <div class="btnNote">In grid: Button down alternates pixel highlight ON / OFF</div>
+        </div>
     </div>
     <div class="container" id="grid">
         <div class="sketch">
