--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -14,10 +14,15 @@
             <div class="btnNote">Set: (or reset) number of grid pixel squares per side</div>
             <button class="setGridSize" onclick="gridSetUp()" >Set Grid Size</button>
             <div class="btnNote">In grid: Button down alternates pixel highlight ON / OFF</div>
+
             <div class="randNote">
                 <span class="flex-control-rand">
                 <input type="checkbox" id="random" name="random">
                 <label id="randLabel" for="random">Randomise</label>
+                </span>
+                <span class="flex-control-dark">
+                <input type="checkbox" id="darken" name="darken">
+                <label id="darkLabel" for="darken">Darken</label>
                 </span>
             </div>
         </div>
